# course-crawler

./: .gitignore  README.md  pyproject.toml
crawlers/: process_all_transcripts.py  transcript_formatter.py
crawlers/dl_coursera/: README.md  process_all_transcripts.py  standardize_dl_coursera_metadata.py
crawlers/manual_upload/: README.md  standardize_metadata.py
prompts/: log_policy.md
tests/: test_standardize_metadata_manual_upload.py
tests/data/manual_upload/: input.json
tests/data/manual_upload/fs/sample-course/01@intro-module/01@lesson-one/01@getting-started/: page.html
utils/: split_week_slides.py
