[project]
name = "course-crawler"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "datagero", email = "datagero@outlook.com" }]
dependencies = [
    "requests>=2.32.3,<3",
    "beautifulsoup4>=4.12.3,<5",
    "selenium>=4.25.0,<5",
    "scrapy>=2.11.2,<3",
    "dl-coursera>=0.1.2,<0.2",
    "pypdf2>=3.0.1,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "crawlers",
]
